docs-archive/apache-airflow-providers-google/10.26.0/_sources/_api/tests/system/google/cloud/data_loss_prevention/example_dlp_info_types/index.rst.txt
:py:mod:`tests.system.google.cloud.data_loss_prevention.example_dlp_info_types`
===============================================================================

.. py:module:: tests.system.google.cloud.data_loss_prevention.example_dlp_info_types

.. autoapi-nested-parse::

   Example Airflow DAG that creates and manage Data Loss Prevention info types.



Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'dlp_info_types'

   

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: TEMPLATE_ID

   

.. py:data:: ITEM

   

.. py:data:: INSPECT_CONFIG

   

.. py:data:: INSPECT_TEMPLATE

   

.. py:data:: BUCKET_NAME

   

.. py:data:: FILE_NAME
   :value: 'dictionary.txt'

   

.. py:data:: UPLOAD_FILE_PATH

   

.. py:data:: FILE_SET
   :value: 'tmp/'

   

.. py:data:: DICTIONARY_PATH

   

.. py:data:: OBJECT_GCS_URI

   

.. py:data:: OBJECT_GCS_OUTPUT_URI

   

.. py:data:: CUSTOM_INFO_TYPE_ID
   :value: 'custom_info_type'

   

.. py:data:: CUSTOM_INFO_TYPES

   

.. py:data:: UPDATE_CUSTOM_INFO_TYPE

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

