docs-archive/apache-airflow-providers-google/15.0.1/_sources/_api/tests/system/google/cloud/data_loss_prevention/example_dlp_info_types/index.rst.txt
tests.system.google.cloud.data_loss_prevention.example_dlp_info_types
=====================================================================

.. py:module:: tests.system.google.cloud.data_loss_prevention.example_dlp_info_types

.. autoapi-nested-parse::

   Example Airflow DAG that creates and manage Data Loss Prevention info types.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.DAG_ID
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.ENV_ID
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.PROJECT_ID
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.TEMPLATE_ID
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.ITEM
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.INSPECT_CONFIG
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.INSPECT_TEMPLATE
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.BUCKET_NAME
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.FILE_NAME
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.UPLOAD_FILE_PATH
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.FILE_SET
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.DICTIONARY_PATH
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.OBJECT_GCS_URI
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.OBJECT_GCS_OUTPUT_URI
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.CUSTOM_INFO_TYPE_ID
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.CUSTOM_INFO_TYPES
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.UPDATE_CUSTOM_INFO_TYPE
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.create_bucket
   tests.system.google.cloud.data_loss_prevention.example_dlp_info_types.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'dlp_info_types'


.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: TEMPLATE_ID
   :value: 'dlp-inspect-info-Uninferable'


.. py:data:: ITEM

.. py:data:: INSPECT_CONFIG

.. py:data:: INSPECT_TEMPLATE

.. py:data:: BUCKET_NAME
   :value: 'bucket_dlp_info_types_Uninferable'


.. py:data:: FILE_NAME
   :value: 'dictionary.txt'


.. py:data:: UPLOAD_FILE_PATH
   :value: ''


.. py:data:: FILE_SET
   :value: 'tmp/'


.. py:data:: DICTIONARY_PATH
   :value: 'tmp/dictionary.txt'


.. py:data:: OBJECT_GCS_URI
   :value: 'gs://bucket_dlp_info_types_Uninferable/tmp/'


.. py:data:: OBJECT_GCS_OUTPUT_URI
   :value: 'gs://bucket_dlp_info_types_Uninferable/tmp/dictionary.txt'


.. py:data:: CUSTOM_INFO_TYPE_ID
   :value: 'custom_info_type'


.. py:data:: CUSTOM_INFO_TYPES

.. py:data:: UPDATE_CUSTOM_INFO_TYPE

.. py:data:: create_bucket

.. py:data:: test_run

